[project]
name = "budget-bridge"
version = "0.1.0"
description = "BudgetBridge is a lightweight, Streamlit‑powered utility that transforms raw bank statements (PDF, Excel or CSV) into ready‑to‑import budget entries. Leveraging AI for Categorizing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fuzzywuzzy>=0.18.0",
    "google-genai>=1.19.0",
    "google-generativeai>=0.8.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.6",
    "python-levenshtein>=0.27.1",
    "streamlit>=1.45.1",
]
